Add initial composer config

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,20 @@
 {
+  "name": "akipe/pnut",
+  "description": "PHP client library for Network Ups Tools (NUT)",
+  "type": "library",
+  "keywords": ["nut", "network ups tools", "ups"],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Milletre Julien",
+      "role": "Developer"
+    }
+  ],
+  "require": {
+    "php": ">=8.1"
+  },
   "autoload": {
-    "psr-4": {"PNut\\": "src/"}
+    "psr-4": {
+      "PNut\\": "src/"}
   }
 }
