--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
   "require": {
     "php": ">=8.1"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^9"
+  },
   "autoload": {
     "psr-4": {
       "PNut\\": "src/"}
